worked on visualizing the variation results and moved a lot of code to my "new" journal

--- a/paper/Interpreting Random Forest Predictions for Firearm Identification Using LIME.Rmd
+++ b/paper/Interpreting Random Forest Predictions for Firearm Identification Using LIME.Rmd
@@ -54,92 +54,6 @@ hamby173and252_train <- read.csv("../data/hamby173and252_train.csv")
 rf_features <- rownames(rtrees$importance)
 ```
 
-```{r fig.height = 5, fig.width = 8}
-# Create plots of the feature distributions colored by samesource for the training data
-hamby173and252_train %>% 
-  select(rf_features, samesource) %>%
-  gather(key = feature, value = value, 1:9) %>%
-  select(feature, value, samesource) %>%
-  ggplot(aes(x = value, fill = samesource)) + 
-  geom_histogram(bins = 30) + 
-  facet_wrap( ~ feature, scales = "free") +
-  labs(x = "Variable Value", y = "Frequency", fill = "Same Source?") +
-  theme_bw() +
-  theme(legend.position = "bottom")
-```
-
-```{r fig.height = 5, fig.width = 8}
-# Create plots of the feature distributions colored by samesource for the training data
-# using the position = "fill" option
-hamby173and252_train %>% 
-  select(rf_features, samesource) %>%
-  gather(key = feature, value = value, 1:9) %>%
-  select(feature, value, samesource) %>%
-  ggplot(aes(x = value, fill = samesource)) + 
-  geom_histogram(position = "fill", bins = 30) + 
-  facet_wrap( ~ feature, scales = "free") +
-  labs(x = "Variable Value", y = "Proportion", fill = "Same Source?") +
-  theme_bw() +
-  theme(legend.position = "bottom")
-```
-
-```{r fig.height = 4, fig.width = 9}
-# Create a correlation heatmap of the match comparisons in the training data
-cor_match <- hamby173and252_train %>%
-  select(rf_features, samesource) %>%
-  filter(samesource == TRUE) %>%
-  select(-samesource) %>%
-  cor() %>%
-  reshape2::melt() %>%
-  mutate(Var1 = factor(Var1, levels = c("ccf", "cms", "matches", "rough_cor", "sum_peaks",
-                                        "D", "sd_D", "mismatches", "non_cms")),
-         Var2 = factor(Var2, levels = c("ccf", "cms", "matches", "rough_cor", "sum_peaks",
-                                        "D", "sd_D", "mismatches", "non_cms"))) %>%
-  ggplot(aes(x = Var1, y = Var2, fill = value)) + 
-  geom_tile() + 
-  scale_fill_gradient2(limits = c(-1, 1)) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1),
-        legend.position = "none") + 
-  labs(x = "", y = "", fill = "Correlation",
-       title = "Match Comparisons")
-
-# Create a correlation heatmap of the non-match comparisons in the training data
-cor_nonmatch <- hamby173and252_train %>%
-  select(rf_features, samesource) %>%
-  filter(samesource == FALSE) %>%
-  select(-samesource) %>%
-  cor() %>%
-  reshape2::melt() %>%
-  mutate(Var1 = factor(Var1, levels = c("ccf", "cms", "matches", "rough_cor", "sum_peaks",
-                                        "D", "sd_D", "mismatches", "non_cms")),
-         Var2 = factor(Var2, levels = c("ccf", "cms", "matches", "rough_cor", "sum_peaks",
-                                        "D", "sd_D", "mismatches", "non_cms"))) %>%
-  ggplot(aes(x = Var1, y = Var2, fill = value)) + 
-  geom_tile() + 
-  scale_fill_gradient2(limits = c(-1, 1)) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1),
-        legend.position = "none") +
-  labs(x = "", y = "", fill = "Correlation",
-       title = "Non-Match Comparisons")
-
-# Create a title for the panel of plots
-cor_title <- ggdraw() +
-  draw_label("Correlation of Feature Variables in the Training Data", 
-             fontface = "bold", 
-             size = 16,
-             x = 0.5,
-             hjust = 0.5)
-
-# Create a joined legend for the panel of plots
-cor_legend <- get_legend(cor_match + theme(legend.position = "right"))
-
-# Create the panel of plots
-plot_grid(cor_title, 
-          plot_grid(cor_match, cor_nonmatch, cor_legend, ncol = 3, rel_widths = c(2, 2, 0.5)),
-          ncol = 1,
-          rel_heights = c(0.25, 3))
-```
-
 ## Testing Data: The Hamby 224 Clone
 
 The Hamby 224 Clone is organized as a test set of a cloned (sub-)set of the Hamby 224 bullets. As with all Hamby sets [@hamby], Hamby set 224, is a collection of 35 bullets, organized as 20 known bullets and 15 questioned bullets. The known bullets are fired in pairs of two through one of ten consecutively manufactures P-85 barrels.
@@ -242,77 +156,12 @@ LIME was designed to be a generalized algorithm that can be applied to any predi
 
 Suppose that a complex model has been fit on a training dataset with $k$ features and a response variable that may either be numeric or categorical. This trained model will be applied to a testing dataset containing the $k$ features to obtain predictions. It is of interest to understand which variables played an important role in the predictions. LIME will be applied to one of the cases in the testing dataset to obtain an explanation. To create the explanation, LIME starts by approximating the distribution of each of the $k$ features in the training dataset. It then simulates a large data frame from these distributions. The simulated data are used to perform feature selection to determine the $m$ most important features. Then a weighted ridge regression model is fit to standardized versions of the selected $m$ features from the simulated data. The model assigns higher weights to observations closer to the observed case of interest. A linear model is used since it has a well known form and coefficients that can be interpreted. The coefficients from the model are extracted and used to "explain" the importance of the variables. Features with a larger absolute value of their coefficient are implied to play a larger role in the creation of the prediction.
 
+The developers of LIME wrote a Python package to implement LIME, and Thomas Lin Pedersen adapted their work to create an R package called `lime`. This paper will use version `r packageVersion("lime")` of the R package `lime` in the analysis of the bullet matching data.
+
+
 ## Applying LIME
 
-The developers of LIME wrote a Python package to implement LIME, and Thomas Lin Pedersen adapted their work to create an R package called `lime`. This paper will use version `r packageVersion("lime")` of the R package `lime` in the analysis of the bullet matching data. The steps below explain the procedure that the R package is using to apply the LIME algorithm to the bullet matching predictions on the Hamby 224 clone dataset made by the random forest model from Hare. For simplicity, the steps are described as what happens to one case in the test data. Thus, the steps (2) through (7) are repeated for each observation in the testing dataset.
-
-Let
-  $$Y_{jk} = \begin{cases} 
-  1 & \mbox{ if bullets } j \mbox{ and } k \mbox{ were fired from the same gun barrel }\\
-  0 & \mbox{otherwise}
-  \end{cases}$$
-be the response variable in the training dataset, and $X_1,...,X_9$ correspond to the nine features in the training dataset. Let $X'_1,...,X'_9$ be the 
-
-\begin{enumerate}
-\item Distributions for each of the features in the training data are obtained.
-
-\begin{quote}
-The method that `lime` uses to obtain the distribution differs based on the feature type. All of the features in the Hamby datasets are numeric. For numeric features, the default option in `lime` (`quantile\_bins = TRUE`) computes the quantiles of each feature based on the number of bins selected. The default number of bins is 4 (`n\_bins = 4`).
-\end{quote}
-
-\item $n$ samples from each of the feature distributions are drawn.
-
-\begin{quote}
-To do this, `lime` has several options (mostly quoted from `lime` package for now):
-\begin{itemize}
-\item bin\_continuous = TRUE should continuous variables be binned?
-\item quantile\_bins = TRUE should the ins for n\_bins be based on quantiles or spread evenly
-\item n\_bins = 4 number of bins if bin\_continuous is TRUE
-\item use\_density = TRUE if bin\_continuous is FALSE, should continuous data be sampled using kernel density estimation (if not, then will assume normal for continuous variable)
-\end{itemize}
-\end{quote}
-
-\item Predictions for the testing data using the random forest model are computed.
-
-\begin{quote}
-The random forest model `rtrees` is used to make a prediction for the observation from the test dataset and each of the $n=5000$ samples as to whether or not the comparison of the two bullets in the test case are a match. Since the random forest is a classification model, `lime` is set to return the prediction probabilities.
-\end{quote}
-
-\item Similarity score between the observation in the testing data and each of the $n=5000$ sampled values are obtained.
-
-\begin{quote}
-The way that the similarity score is computed depends on the type of feature. Since all of the features in the Hamby 224 test dataset are continuous, the simulated values are first converted into 0-1 features where a 1 indicates that the feature from the simulated value falls in the same bin as the observed data point and a 0 indicates that the feature is not in the same bin as the observed data point. Then, by default, the Gower distance is used to compute the similarity score. (using the `gower` package in R)
-\end{quote}
-
-\item Feature selection is performed by fitting some type of regression model weighted by the similarity scores is to the simulated data and the observed value. The 0-1 versions of the features are used.
-
-\begin{quote}
-The user can specify the number of features, $m$, they would like to select to explain the prediction. `lime` supports the following options for feature selection
-\begin{enumerate}
-\item forward selection with ridge regression
-\item highest weight with ridge regression
-\item LASSO model
-\item tree model
-\item default: forward selection if $m\le6$ with a ridge regression model, highest weight with ridge regression otherwise
-\end{enumerate}
-\end{quote}
-
-\item A ridge regression model is fit as the simple model by regressing the prediction probabilities on the $m$ selected predictor variables and weighted by the similarity scores. If the response is categorical, the user can select how many categories and which categories they want to explain.
-
-  $$P(Match = TRUE) = \beta_0 + 
-  \beta_1 \cdot I\left[X_1 \in \mbox{obs bin}\right] + 
-  \beta_2 \cdot I\left[X_2 \in \mbox{obs bin}\right] + 
-  \beta_3 \cdot I\left[X_3 \in \mbox{obs bin}\right]$$
-  
-For the prediction of interest, 
-
-  $$P(Match = TRUE) = \beta_0 + \beta_1 + \beta_2 + \beta_3.$$
-
-\item The feature weights are extracted and used as the explanations.
-
-\end{enumerate}
-
-Note: I realized that if `bin_continuous = FALSE`, then bins are not used at all. Instead, a kernel density estimator is used to sample from the distribution (or a normal distribution if specified), and then the ridge regression models are fit without "numerified" values.
+(this is the section where I will describe how lime was applied and which input values were used)
 
 ```{r}
 # Apply the run_lime function if the lime results file does not already exist
@@ -445,7 +294,7 @@ if(!file.exists("../data/hamby224_test_explain.rds")) {
 # Create the lime comparison data if the file does not already exist
 if(!file.exists("../data/hamby224_lime_comparisons.rds")) {
   
-  # Create a data frame with the interesting information relating to the differe
+  # Create a data frame with the interesting information relating to the different
   # evaluations of lime and compute the difference and mean between the rf and rr
   # model predictions
   hamby224_lime_comparisons <- hamby224_test_explain %>%
@@ -469,280 +318,7 @@ if(!file.exists("../data/hamby224_lime_comparisons.rds")) {
 }
 ```
 
-```{r}
-hamby224_lime_results <- hamby224_lime_comparisons %>%
-  filter(!is.na(rfscore)) %>%
-  group_by(bin_continuous, quantile_bins, nbins, use_density, set) %>%
-  summarise(mse = (sum(diff)^2) / length(diff),
-            ave_r2 = mean(model_r2)) %>%
-  arrange(set)
-```
-
-```{r}
-hamby224_lime_results %>%
-  group_by(set) %>%
-  arrange(mse) %>%
-  slice(1:2)
-```
-
-```{r}
-hamby224_lime_results %>%
-  ungroup() %>%
-  mutate(bc_qb = as.character(factor(bin_continuous):factor(quantile_bins)),
-         nbins = factor(ifelse(bin_continuous == FALSE, NA, as.character(nbins)))) %>%
-  ggplot(aes(x = nbins, y = mse, color = bc_qb, group = bc_qb)) +
-  geom_point() + 
-  geom_line() + 
-  facet_grid( ~ set) + 
-  theme_bw()
-```
-
-```{r}
-hamby224_lime_results %>%
-  group_by(set) %>%
-  arrange(desc(ave_r2)) %>%
-  slice(1:2)
-```
-
-```{r}
-hamby224_lime_results %>%
-  ungroup() %>%
-  mutate(bc_qb = as.character(factor(bin_continuous):factor(quantile_bins)),
-         nbins = factor(ifelse(bin_continuous == FALSE, NA, as.character(nbins)))) %>%
-  ggplot(aes(x = nbins, y = ave_r2, color = bc_qb, group = bc_qb)) +
-  geom_point() + 
-  geom_line() + 
-  facet_grid(~ set) + 
-  theme_bw()
-```
-
-```{r eval = FALSE}
-hamby224_lime_comparisons %>%
-  filter(quantile_bins == TRUE, nbins == "8", set == "Set 1") %>%
-  select(rf_features, diff, -case) %>%
-  gather(key = feature, value = feature_value, rf_features) %>%
-  select(feature, feature_value, diff) %>%
-  ggplot(aes(x = feature_value, y = diff)) + 
-  geom_point() + 
-  facet_wrap(~ feature, scales = "free") + 
-  geom_hline(yintercept = 0, color = "blue")
-
-hamby224_lime_comparisons %>%
-  filter(quantile_bins == TRUE, nbins == "3", set == "Set 11") %>%
-  select(rf_features, diff, -case) %>%
-  gather(key = feature, value = feature_value, rf_features) %>%
-  select(feature, feature_value, diff) %>%
-  ggplot(aes(x = feature_value, y = diff)) + 
-  geom_point() + 
-  facet_wrap(~ feature, scales = "free") + 
-  geom_hline(yintercept = 0, color = "blue")
-
-hamby224_lime_comparisons %>%
-  filter(!is.na(rfscore), set == "Set 1") %>%
-  ggplot(aes(x = rfscore, y = model_prediction)) + 
-  geom_point(aes(color = model_r2)) + 
-  facet_wrap( ~ nbins) + 
-  theme_bw() + 
-  stat_smooth(method = "lm")
-
-hamby224_lime_comparisons %>%
-  filter(!is.na(rfscore), set == "Set 11") %>%
-  ggplot(aes(x = rfscore, y = model_prediction)) + 
-  geom_point(aes(color = model_r2)) + 
-  facet_wrap( ~ nbins) + 
-  theme_bw() + 
-  stat_smooth(method = "lm")
-
-hamby224_lime_comparisons %>%
-  filter(!is.na(rfscore), set == "Set 1") %>%
-  ggplot(aes(x = rfscore, y = abs(diff))) + 
-  geom_point(aes(color = model_r2)) + 
-  facet_wrap( ~ nbins) +
-  theme_bw()
-
-hamby224_lime_comparisons %>%
-  filter(!is.na(rfscore), set == "Set 11") %>%
-  ggplot(aes(x = rfscore, y = abs(diff))) + 
-  geom_point(aes(color = model_r2)) + 
-  facet_wrap( ~ nbins) +
-  theme_bw()
-
-hamby224_lime_comparisons %>%
-  filter(!is.na(rfscore), set == "Set 1") %>%
-  ggplot(aes(x = rfscore, y = diff)) + 
-  geom_point(aes(color = model_r2)) + 
-  facet_wrap( ~ nbins) +
-  geom_hline(yintercept = 0, color = "blue") +
-  theme_bw()
-
-hamby224_lime_comparisons %>%
-  filter(!is.na(rfscore), set == "Set 11") %>%
-  ggplot(aes(x = rfscore, y = diff)) + 
-  geom_point(aes(color = model_r2)) + 
-  facet_wrap( ~ nbins) +
-  geom_hline(yintercept = 0, color = "blue") +
-  theme_bw()
-```
-
-## Assessing the Variability of the LIME Results
-
-```{r}
-# Perform the sensitivity analysis if not already saved
-if(!file.exists("../data/hamby224_sensitivity_inputs.rds")) {
-  
-  # Specify the number of reps and input cases
-  nreps = 10
-  noptions = 12
-  
-  # Specify the inputs for the sensitivity analysis
-  hamby224_sensitivity_inputs <- data.frame(bin_continuous = c(rep(TRUE, nreps * 10), 
-                                                      rep(FALSE, nreps * 2)),
-                                   quantile_bins = c(rep(c(TRUE, FALSE), each = nreps * 5), 
-                                                     rep(TRUE, nreps * 2)),
-                                   nbins = c(rep(rep(2:6, each = nreps), 2), 
-                                             rep(4, nreps * 2)),
-                                   use_density = c(rep(TRUE, nreps * 11), 
-                                                   rep(FALSE, nreps))) %>%
-    mutate(case = 1:(nreps * noptions)) %>%
-    select(case, bin_continuous, nbins, quantile_bins, use_density)
-  
-  # Tell R to run the upcoming code in parallel
-  plan(multiprocess)
-
-  # Run lime for the sensitivity analysis
-  hamby224_sensitivity_outputs <- future_pmap(.l = as.list(hamby224_sensitivity_inputs %>%
-                                                             select(-case)),
-             .f = run_lime, # run_lime is one of my helper functions
-             train = hamby173and252_train %>% select(rf_features),
-             test = hamby224_test %>% arrange(case) %>% select(rf_features) %>% na.omit(),
-             rfmodel = as_classifier(rtrees),
-             label = "TRUE",
-             nfeatures = 3,
-             seed = FALSE) %>%
-    map_df(function(list) list$explain) %>%
-    mutate(rep = factor(rep(rep(1:nreps, each = dim(hamby224_test %>% na.omit())[1] * 3),
-                            noptions))) %>%
-    full_join(hamby224_test %>% na.omit() %>% 
-                mutate(case = as.character(case)), by = "case") %>%
-    mutate(case = factor(case)) %>%
-    select(case, model_r2:feature_weight, bin_continuous:rep, set:land2, rfscore, samesource)
-  
-  # Save the sensitivity inputs and outputs
-  saveRDS(hamby224_sensitivity_inputs, "../data/hamby224_sensitivity_inputs.rds")
-  saveRDS(hamby224_sensitivity_outputs, "../data/hamby224_sensitivity_outputs.rds")
-  
-} else {
-  
-  # Load in the sensitivity inputs and outputs
-  hamby224_sensitivity_inputs <- readRDS("../data/hamby224_sensitivity_inputs.rds")
-  hamby224_sensitivity_outputs <- readRDS("../data/hamby224_sensitivity_outputs.rds")
-
-}
-```
-
-```{r}
-hamby224_sensitivity_results <- hamby224_sensitivity_outputs %>%
-  mutate(situation = ifelse(bin_continuous == TRUE & quantile_bins == TRUE, 
-                            sprintf("%.0f quantile bins", nbins),
-                            ifelse(bin_continuous == TRUE & quantile_bins == FALSE, 
-                                   sprintf("%.0f equally space bins", nbins),
-                                   ifelse(bin_continuous == FALSE & use_density == TRUE, 
-                                          "kernel density", "normal approximation"))),
-         diff = rfscore - model_prediction) %>%
-  mutate(situation = fct_relevel(situation, 
-                                 "2 quantile bins", 
-                                 "3 quantile bins",
-                                 "4 quantile bins",
-                                 "5 quantile bins",
-                                 "6 quantile bins"))
-
-hamby224_sensitivity_mses <- hamby224_sensitivity_results %>%
-  group_by(set, rep, situation) %>%
-  summarise(mse = sum((diff)^2) / length(diff))
-```
-
-```{r}
-hamby224_sensitivity_results %>%
-  group_by(set, case, rep, situation) %>%
-  slice(1) %>%
-  ungroup() %>%
-  group_by(set, case, situation) %>%
-  summarise(nlevels = length(levels(factor(feature))),
-            count = n()) %>%
-  ungroup() %>%
-  group_by(set, situation) %>%
-  summarise(mean_nlevels = mean(nlevels),
-            sd_nlevels = sd(nlevels),
-            upper = mean(nlevels) + sd(nlevels),
-            lower = mean(nlevels) - sd(nlevels)) %>%
-  ggplot(aes(x = situation, y = mean_nlevels)) + 
-  geom_point() + 
-  geom_errorbar(aes(ymin = lower, ymax = upper)) +
-  facet_grid(. ~ set) + 
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1))
-```
-
-```{r}
-dat <- data.frame()
-
-hamby224_sensitivity_results %>%
-  filter(set == "Set 1") %>%
-  group_by(case, situation, rep) %>%
-  slice(1) %>%
-  ggplot(aes(x = case, fill = feature)) + 
-  geom_bar(position = "stack") + 
-  coord_flip() + 
-  facet_wrap(situation ~ ., ncol = 5) + 
-  theme(legend.position = "bottom")
-```
-
-```{r}
-hamby224_sensitivity_mses %>%
-  group_by(set, situation) %>%
-  summarise(mean = mean(mse),
-            sd = sd(mse))
-```
-
-```{r}
-hamby224_sensitivity_mses %>%
-  ggplot(aes(x = situation, y = mse)) + 
-  geom_boxplot() + 
-  geom_point() + 
-  facet_grid( ~ set) + 
-  theme_bw() +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1)) + 
-  labs(x = "", y = "MSE")
-```
-
 ## Visualizing the LIME Explanations
-
-```{r}
-hamby224_test_explain %>%
-  filter(set == "Set 1", nbins == "2") %>%
-  ggplot(aes(x = feature_desc)) + 
-  geom_bar() +
-  coord_flip() + 
-  facet_grid(set ~ .)
-```
-
-```{r}
-hamby224_test %>%
-  filter(set == "Set 1") %>%
-  ggplot(aes(x = land1, y = land2, label = bullet1, label2 = bullet2,
-             text = paste('Bullets Compared: ', bullet1, "-", land1, 
-                          "vs", bullet2, "-", land2,
-                          '\nRandom Forest Score: ', 
-                          ifelse(is.na(rfscore), "Missing due to tank rash", rfscore)))) +
-  geom_tile(aes(fill = rfscore)) +
-  facet_grid(bullet2 ~ bullet1, scales = "free") +
-  theme_minimal() +
-  scale_fill_gradient2(low = "darkgrey", high = "darkorange", midpoint = 0.5) +
-  theme(axis.text.x = element_text(angle = 45, hjust = 1),
-        panel.grid.major = element_blank(), 
-        panel.grid.minor = element_blank()) +
-  labs(x = "", y = "", fill = "RF Score")
-```
 
 # Results
 
